<resources>
    <string name="app_name">SkripsiApp</string>
    <string name="sispos">SISPOS</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="welcome">Welcome</string>
    <string name="keranjang">Keranjang</string>
    <string name="dummy_price">Rp 20.000</string>
    <string name="dummy_item_name">Nama Barang</string>
    <string name="checkout">Checkout</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="stok_masuk">Stok Masuk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="dummy_quantity">20</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>