<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@drawable/bg_login">

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/sispos"
        android:textAlignment="center"
        android:textSize="32sp"
        android:fontFamily="@font/coolvetica_rg"
        android:textColor="@color/blue_ocean"
        android:letterSpacing="0.10"
        android:layout_marginTop="65dp"
        android:shadowDy="3"
        android:shadowColor="@color/black"
        android:shadowRadius="2"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/light_blue_ocean"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <ProgressBar
            android:id="@+id/pb_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:indeterminateTint="@color/white"
            android:indeterminate="true"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:fontFamily="@font/coolvetica_rg"
                android:textColor="@color/white"
                android:letterSpacing="0.10"
                android:layout_marginTop="18dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/coolvetica_rg"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:letterSpacing="0.10"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/white"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/password"
                    android:fontFamily="@font/coolvetica_rg"
                    android:textSize="18sp"
                    android:textCursorDrawable="@color/white"
                    android:textColor="@color/white"
                    android:letterSpacing="0.10"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.skripsiapp.CustomView.LoginButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:fontFamily="@font/coolvetica_rg"
                android:letterSpacing="0.10"
                android:textSize="18sp"
                android:textColor="@color/blue_ocean"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cv_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Belum punya akun?"
        android:layout_marginTop="32dp"
        android:layout_marginRight="90dp"
        android:textSize="18sp"
        android:textColor="@color/light_blue_ocean"
        android:fontFamily="@font/coolvetica_rg"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cv_login"
        app:layout_constraintLeft_toRightOf="@id/txt_1"
        android:text="Buat Akun"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="6dp"
        android:textSize="18sp"
        android:textColor="@color/blue_ocean"
        android:fontFamily="@font/coolvetica_rg"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>