<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/light_blue_ocean"
    app:cardElevation="6dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/dummy_item_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:layout_marginRight="140dp"/>
        <TextView
            android:id="@+id/txt_price_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_item_name"
            app:layout_constraintLeft_toLeftOf="@id/txt_item_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/dummy_price"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_marginBottom="8dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:letterSpacing="0.08"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            app:cardCornerRadius="12dp"
            app:cardElevation="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardBackgroundColor="@color/dark_blue_ocean"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="8dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_min"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txt_cart_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_quantity"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue_ocean"
                    android:textStyle="bold"
                    android:fontFamily="@font/coolvetica_rg"
                    app:layout_constraintLeft_toRightOf="@id/btn_min"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="8dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/txt_cart_quantity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardBackgroundColor="@color/dark_blue_ocean"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="8dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_plus"/>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>