<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Gudang.EditProductActivity"
    android:background="@drawable/bg_white">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"/>

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tambah Produk Baru"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_back"
        android:textSize="24sp"
        android:textColor="@color/blue_ocean"
        android:fontFamily="@font/coolvetica_rg"
        android:letterSpacing="0.08"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:shadowColor="@color/text_shadow"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/txt_header"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/blue_ocean"
        app:hintTextColor="@color/blue_ocean"
        app:boxStrokeColor="@color/blue_ocean"
        android:hint="@string/nama_produk"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:errorEnabled="true"
        android:elevation="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coolvetica_rg"
            android:textSize="18sp"
            android:textColor="@color/blue_ocean"
            android:letterSpacing="0.10"
            android:inputType="text"
            android:textCursorDrawable="@color/blue_ocean"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_product_name"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColorHint="@color/blue_ocean"
        app:hintTextColor="@color/blue_ocean"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:hint="@string/harga_produk"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:errorEnabled="true"
        android:elevation="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coolvetica_rg"
            android:textSize="18sp"
            android:textColor="@color/blue_ocean"
            android:letterSpacing="0.10"
            android:inputType="number"
            android:textCursorDrawable="@color/blue_ocean"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_product_first_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_product_price"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColorHint="@color/blue_ocean"
        app:hintTextColor="@color/blue_ocean"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:hint="@string/stok_masuk"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:errorEnabled="true"
        android:elevation="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_product_first_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coolvetica_rg"
            android:textSize="18sp"
            android:textColor="@color/blue_ocean"
            android:letterSpacing="0.10"
            android:inputType="text"
            android:textCursorDrawable="@color/blue_ocean"
            android:maxLines="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_product_first_stock"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColorHint="@color/blue_ocean"
        app:hintTextColor="@color/blue_ocean"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:hint="@string/deskripsi_produk"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:errorEnabled="true"
        android:elevation="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_product_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coolvetica_rg"
            android:textSize="18sp"
            android:textColor="@color/blue_ocean"
            android:letterSpacing="0.10"
            android:inputType="text"
            android:textCursorDrawable="@color/blue_ocean"
            android:maxLines="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.skripsiapp.CustomView.CartButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_product_desc"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:text="Simpan"
        android:minHeight="0dp"/>

    <ProgressBar
        android:id="@+id/pb_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>